# Droid-Debug-Bridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
src/ddb/: __init__.py  cli.py
src/ddb/modules/: build.py  debug.py  device.py  doctor.py  init.py  logs.py  ui.py  workflow.py
src/ddb/utils/: adb.py  output.py  parser.py
tests/: test_adb.py  test_cli.py  test_doctor.py  test_output.py  test_parser.py
