[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddb-tool"
version = "0.1.0"
description = "Droid Debug Bridge — CLI toolkit for AI-assisted Android development"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [
    { name = "Trackonomysystems", email = "diwakar@trackonomysystems.com" },
]
keywords = ["android", "adb", "cli", "development", "automation", "testing", "droid-debug-bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "black", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/trackonomysystems/ddb"
Documentation = "https://github.com/trackonomysystems/ddb#readme"
Issues = "https://github.com/trackonomysystems/ddb/issues"

[project.scripts]
ddb = "ddb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
