[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddb-tool"
version = "0.1.0"
description = "Droid Debug Bridge — CLI toolkit for AI-assisted Android development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Diwakar Reddy", email = "diwakar.reddy.p@gmail.com" },
]
keywords = ["android", "adb", "cli", "development", "automation", "testing", "droid-debug-bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Debuggers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "black", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/diwakar-reddy/Droid-Debug-Bridge"
Documentation = "https://github.com/diwakar-reddy/Droid-Debug-Bridge#readme"
Issues = "https://github.com/diwakar-reddy/Droid-Debug-Bridge/issues"
Changelog = "https://github.com/diwakar-reddy/Droid-Debug-Bridge/blob/main/CHANGELOG.md"

[project.scripts]
ddb = "ddb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
